# homework_12_2

./: pyproject.toml
test/: test_dict.py
