[tool.poetry]
name = "hw-12-2"
version = "0.1.0"
description = ""
authors = ["user <kosareva.karina2013@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw_12_2"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
